b=617231 ensure-direction before doing any complex work, and handle mirroring (from harfbuzz ee8aaf976a6e) r=jfkthame a=roc

--HG--
extra : transplant_source : %80%B5%D5s%21f%112%83%5C%CC%18%8C%2CG%01%17-%3A%9A